// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div>
  <select
    className="sc-bdVaJa xJEgG"
    id="state"
    name="state"
  >
    <option
      value="null"
    >
      Select a state ...
    </option>
    <option
      value="AL"
    >
      Alabama
    </option>
    <option
      value="AK"
    >
      Alaska
    </option>
    <option
      value="AS"
    >
      American Samoa
    </option>
    <option
      value="AZ"
    >
      Arizona
    </option>
    <option
      value="AR"
    >
      Arkansas
    </option>
    <option
      value="CA"
    >
      California
    </option>
    <option
      value="CO"
    >
      Colorado
    </option>
    <option
      value="CT"
    >
      Connecticut
    </option>
    <option
      value="DE"
    >
      Delaware
    </option>
    <option
      value="DC"
    >
      District Of Columbia
    </option>
    <option
      value="FM"
    >
      Federated States Of Micronesia
    </option>
    <option
      value="FL"
    >
      Florida
    </option>
    <option
      value="GA"
    >
      Georgia
    </option>
    <option
      value="GU"
    >
      Guam
    </option>
    <option
      value="HI"
    >
      Hawaii
    </option>
    <option
      value="ID"
    >
      Idaho
    </option>
    <option
      value="IL"
    >
      Illinois
    </option>
    <option
      value="IN"
    >
      Indiana
    </option>
    <option
      value="IA"
    >
      Iowa
    </option>
    <option
      value="KS"
    >
      Kansas
    </option>
    <option
      value="KY"
    >
      Kentucky
    </option>
    <option
      value="LA"
    >
      Louisiana
    </option>
    <option
      value="ME"
    >
      Maine
    </option>
    <option
      value="MH"
    >
      Marshall Islands
    </option>
    <option
      value="MD"
    >
      Maryland
    </option>
    <option
      value="MA"
    >
      Massachusetts
    </option>
    <option
      value="MI"
    >
      Michigan
    </option>
    <option
      value="MN"
    >
      Minnesota
    </option>
    <option
      value="MS"
    >
      Mississippi
    </option>
    <option
      value="MO"
    >
      Missouri
    </option>
    <option
      value="MT"
    >
      Montana
    </option>
    <option
      value="NE"
    >
      Nebraska
    </option>
    <option
      value="NV"
    >
      Nevada
    </option>
    <option
      value="NH"
    >
      New Hampshire
    </option>
    <option
      value="NJ"
    >
      New Jersey
    </option>
    <option
      value="NM"
    >
      New Mexico
    </option>
    <option
      value="NY"
    >
      New York
    </option>
    <option
      value="NC"
    >
      North Carolina
    </option>
    <option
      value="ND"
    >
      North Dakota
    </option>
    <option
      value="MP"
    >
      Northern Mariana Islands
    </option>
    <option
      value="OH"
    >
      Ohio
    </option>
    <option
      value="OK"
    >
      Oklahoma
    </option>
    <option
      value="OR"
    >
      Oregon
    </option>
    <option
      value="PW"
    >
      Palau
    </option>
    <option
      value="PA"
    >
      Pennsylvania
    </option>
    <option
      value="PR"
    >
      Puerto Rico
    </option>
    <option
      value="RI"
    >
      Rhode Island
    </option>
    <option
      value="SC"
    >
      South Carolina
    </option>
    <option
      value="SD"
    >
      South Dakota
    </option>
    <option
      value="TN"
    >
      Tennessee
    </option>
    <option
      value="TX"
    >
      Texas
    </option>
    <option
      value="UT"
    >
      Utah
    </option>
    <option
      value="VT"
    >
      Vermont
    </option>
    <option
      value="VI"
    >
      Virgin Islands
    </option>
    <option
      value="VA"
    >
      Virginia
    </option>
    <option
      value="WA"
    >
      Washington
    </option>
    <option
      value="WV"
    >
      West Virginia
    </option>
    <option
      value="WI"
    >
      Wisconsin
    </option>
    <option
      value="WY"
    >
      Wyoming
    </option>
  </select>
</div>
`;

exports[`should render with a custom formatted label 1`] = `
<div>
  <select
    className="sc-bdVaJa xJEgG"
    id="state"
    name="state"
  >
    <option
      value="null"
    >
      Select a state ...
    </option>
    <option
      value="AL"
    >
      AL - [STATE]
    </option>
    <option
      value="AK"
    >
      AK - [STATE]
    </option>
    <option
      value="AS"
    >
      AS - [STATE]
    </option>
    <option
      value="AZ"
    >
      AZ - [STATE]
    </option>
    <option
      value="AR"
    >
      AR - [STATE]
    </option>
    <option
      value="CA"
    >
      CA - [STATE]
    </option>
    <option
      value="CO"
    >
      CO - [STATE]
    </option>
    <option
      value="CT"
    >
      CT - [STATE]
    </option>
    <option
      value="DE"
    >
      DE - [STATE]
    </option>
    <option
      value="DC"
    >
      DC - [STATE]
    </option>
    <option
      value="FM"
    >
      FM - [STATE]
    </option>
    <option
      value="FL"
    >
      FL - [STATE]
    </option>
    <option
      value="GA"
    >
      GA - [STATE]
    </option>
    <option
      value="GU"
    >
      GU - [STATE]
    </option>
    <option
      value="HI"
    >
      HI - [STATE]
    </option>
    <option
      value="ID"
    >
      ID - [STATE]
    </option>
    <option
      value="IL"
    >
      IL - [STATE]
    </option>
    <option
      value="IN"
    >
      IN - [STATE]
    </option>
    <option
      value="IA"
    >
      IA - [STATE]
    </option>
    <option
      value="KS"
    >
      KS - [STATE]
    </option>
    <option
      value="KY"
    >
      KY - [STATE]
    </option>
    <option
      value="LA"
    >
      LA - [STATE]
    </option>
    <option
      value="ME"
    >
      ME - [STATE]
    </option>
    <option
      value="MH"
    >
      MH - [STATE]
    </option>
    <option
      value="MD"
    >
      MD - [STATE]
    </option>
    <option
      value="MA"
    >
      MA - [STATE]
    </option>
    <option
      value="MI"
    >
      MI - [STATE]
    </option>
    <option
      value="MN"
    >
      MN - [STATE]
    </option>
    <option
      value="MS"
    >
      MS - [STATE]
    </option>
    <option
      value="MO"
    >
      MO - [STATE]
    </option>
    <option
      value="MT"
    >
      MT - [STATE]
    </option>
    <option
      value="NE"
    >
      NE - [STATE]
    </option>
    <option
      value="NV"
    >
      NV - [STATE]
    </option>
    <option
      value="NH"
    >
      NH - [STATE]
    </option>
    <option
      value="NJ"
    >
      NJ - [STATE]
    </option>
    <option
      value="NM"
    >
      NM - [STATE]
    </option>
    <option
      value="NY"
    >
      NY - [STATE]
    </option>
    <option
      value="NC"
    >
      NC - [STATE]
    </option>
    <option
      value="ND"
    >
      ND - [STATE]
    </option>
    <option
      value="MP"
    >
      MP - [STATE]
    </option>
    <option
      value="OH"
    >
      OH - [STATE]
    </option>
    <option
      value="OK"
    >
      OK - [STATE]
    </option>
    <option
      value="OR"
    >
      OR - [STATE]
    </option>
    <option
      value="PW"
    >
      PW - [STATE]
    </option>
    <option
      value="PA"
    >
      PA - [STATE]
    </option>
    <option
      value="PR"
    >
      PR - [STATE]
    </option>
    <option
      value="RI"
    >
      RI - [STATE]
    </option>
    <option
      value="SC"
    >
      SC - [STATE]
    </option>
    <option
      value="SD"
    >
      SD - [STATE]
    </option>
    <option
      value="TN"
    >
      TN - [STATE]
    </option>
    <option
      value="TX"
    >
      TX - [STATE]
    </option>
    <option
      value="UT"
    >
      UT - [STATE]
    </option>
    <option
      value="VT"
    >
      VT - [STATE]
    </option>
    <option
      value="VI"
    >
      VI - [STATE]
    </option>
    <option
      value="VA"
    >
      VA - [STATE]
    </option>
    <option
      value="WA"
    >
      WA - [STATE]
    </option>
    <option
      value="WV"
    >
      WV - [STATE]
    </option>
    <option
      value="WI"
    >
      WI - [STATE]
    </option>
    <option
      value="WY"
    >
      WY - [STATE]
    </option>
  </select>
</div>
`;
